###################################|###|####################################
#   _____                          |   |                                   #
#  |  __ \--.--.----.-----.-----.  |===|  This file is part of Byron, an   #
#  |  __ <  |  |   _|  _  |     |  |___|  evolutionary source-code fuzzer. #
#  |____/ ___  |__| |_____|__|__|   ).(   Version 0.8a1 "Don Juan"         #
#        |_____|                    \|/                                    #
#################################### ' #####################################
# Copyright 2023-24 Giovanni Squillero and Alberto Tonda
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
    name = "byron"
    version = "0.8a1.dev54"
    description = "An evolutionary source-code fuzzer"
    authors = [
        "Cyber Romanticists",
        # "Giovanni Squillero <giovanni.squillero@polito.it>",
        # "Alberto Tonda <alberto.tonda@inrae.fr>",
    ]
    #maintainers = [
    #    "Giovanni Squillero <giovanni.squillero@polito.it>"
    #]
    license = "Apache-2.0"
    readme = "docs/pypi.md"
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries",
    ]
    homepage = "https://cad-polito-it.github.io/byron/"
    repository = "https://github.com/cad-polito-it/byron"
    # documentation = "https://github.com/cad-polito-it/byron/tree/alpha/examples/"
    keywords = [
        "Approximate Optimization",
        "Aritificial Intelligence",
        "Evolutionary Computation",
        "Fuzzer",
    ]

    [tool.poetry.dependencies]
        joblib     = { version = ">=1.3", optional = true }
        matplotlib = { version = ">=3.7", optional = true }
        networkx   = ">=3.1"
        numpy      = ">=2.0"
        psutil     = { version = ">=6.0", optional = true }
        python     = ">=3.10,<3.13"
        rich       = ">=13.5"
        scipy      = ">=1.10"
        tqdm       = ">=4.65"
    bumpver = "^2023.1129"

    [tool.poetry.extras]
        # Use: poetry install --all-extras
        full      = ["joblib", "matplotlib", "psutil"]
        info      = ["psutil"]
        multitask = ["joblib"]
        plot      = ["matplotlib"]

    [tool.poetry.group.dev.dependencies]
        # Use: poetry add --group dev <foo>
        # Use: poetry install --with dev
        black        = { extras = ["jupyter"], version = ">=23.7,<25.0" }
        bumpver      = "^2023.1126"
        coverage     = "^7.5.4"
        icecream     = "^2.1.3"
        ipykernel    = "^6.23.3"
        jupyter      = "^1.0.0"
        mypy         = "^1.4.1"
        pytest       = ">=8.2.2,<9.0"
        pytest-emoji = "^0.2.0"
        ruff         = ">=0.4.10,<0.5.0"
        seaborn      = ">=0.13.2,<0.14.0"
        setuptools   = ">=70.1"
        unicorn      = "^2.0.1.post1"

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

[tool.black]
    target-version            = ['py311']
    extend-exclude            = "^venv$"
    include                   = '(\.ipynb$|\.py$)'
    line-length               = 120
    skip-string-normalization = true

[tool.pytest.ini_options]
    pythonpath     = ["."]
    filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
    branch = true

[tool.coverage.report]
    include = ['byron/*']
    omit    = ['.*/*', 'test/*', 'venv/*']

[tool.mypy]
    modules                = ['byron']
    ignore_missing_imports = true

[tool.pytype]
    inputs = ['byron']

[tool.ruff]
    line-length = 120

    [tool.ruff.lint]
        extend-select = ["I"]

    [tool.ruff.format]
        # Prefer single quotes over double quotes.
        quote-style = "preserve"

[tool.bumpver]
    current_version = "0.8a1.dev54"
    version_pattern = "MAJOR.MINOR[PYTAGNUM].devINC0"
    commit_message  = "style(bumpver): Bump version to {new_version}"
    commit          = true
    push            = false

    [tool.bumpver.file_patterns]
        "pyproject.toml" = [
            'current_version = "{pep440_version}"',
            'version = "{pep440_version}"$',
        ]
        "docs/index.md" = [" v{pep440_version}"]
        "byron/global_symbols.py" = [
            '__date__ = "0D-0M-YYYY"',
            '__version__ = "{pep440_version}"',
        ]
